<resources>

    <string name="app_name">Probabilidad</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_formulas_p">FormulasP</string>
    <string name="pa">A</string>
    <string name="pb">B</string>
    <string name="Borrar">Borrar</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="Continuar">Continuar</string>
    <string name="title_activity_captura">Captura</string>
    <string name="formulas">Formulas de Probabilidad Condicional.</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Atras">Atrás</string>
    <string name="ai">A= </string>
    <string name="bi">B= </string>
    <string name="descrip">Esta es una aplicación muy útil en el ámbito de la probabilidad, es una herraienta para estudiantes de nivel superior o media superior hecho por un programador jr. de android. La aplicación está en versión de prueba ya que sólo tiene formulas simples de probabilidad condicional y quisiera hacerla más útil metiendo más formulas. Espero le agrade al público en gral. y muy independiente de eso, LE SEA ÚTIL. EVGL.</string>
    <string name="finalizar">Finalizar</string>
    <string name="title_activity_pregunta">Pregunta</string>
    <string name="gusto">¿Te gustó el contenido?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="title_activity_gracias">Gracias</string>
    <string name="title_activity_sugerencias">Sugerencias</string>
    <string name="salir">Salir</string>
    <string name="grax">Muchas gracias por haber usado esta aplicación, espera cosas nuevas.</string>
    <string name="suger">Sugerencias</string>
    <string name="desear">¿Qué desearias que le agregara a la aplicación?</string>
    <string name="mas">Más fórmulas de probabilidad condicional</string>
    <string name="vm">Varianza y Media</string>
    <string name="enviar">Enviar</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="disen">Diseño</string>

</resources>