
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="423dp"
    android:background="#3399FF"
    android:orientation="vertical"  >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="30sp"
        android:textSize="20sp"
        android:text="@string/formulas" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15sp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/pa" />

    <EditText
        android:id="@+id/A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15sp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/pb" />

    <EditText
        android:id="@+id/B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:onClick="Aceptar"
        android:text="@string/Aceptar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15sp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/descrip" />

</LinearLayout>
</ScrollView>
